# homebrew-tap

./: .gitignore  .gitmodules  404.html  9rules.rb  Cargo.toml  README.md  assets.go  get_dl_count.js  gibo-wrapper.rb  go.mod  go.sum  heatman.rb  index.xml  lioss.rb  ninerules.rb  omelet.rb  omelette.rb  pochi.rb  qrg.rb  remtools.rb  rrh.rb  scv.rb  sibling.rb  sitemap.xml  tjdoe.rb  ttt.rb  uniq2.rb  update.sh  wildcat.rb
.bin/: update.sh
.github/workflows/: update-formula.yaml
.template/: README_template.md  btmeister_template.rb  gibo-wrapper_template.rb  gixor_template.rb  heatman_template.rb  omelette_template.rb  peripherals_template.rb  pochi_template.rb  rrh_template.rb  sibling_template.rb  spellout_template.rb  tjdoe_template.rb  totebag_template.rb  urleap_template.rb  wildcat_template.rb
.templates/: btmeister.template  gixor.template  lis.template  ninerules.template  oinkie.template  pochi.template  qrg.template  rrh.template  scv.template  template.template  ttt.template
Formula/: btmeister.rb  fauxrest.rb  gibo-wrapper.rb  gixor.rb  heatman.rb  lioss.rb  lis.rb  ninerules.rb  oinkie.rb  omelette.rb  peripherals.rb  pochi.rb  rrh.rb  scv.rb  sibling.rb  spellout.rb  tjdoe.rb  totebag.rb  uniq2.rb  urleap.rb  wildcat.rb
categories/: index.html  index.xml
cmd/updater/: main.go
data/: archived.json  archived_releases.json  projects.json  releases.json
docs/: .gitignore  go.mod  go.sum  hugo.yaml
docs/assets/: projects.json  releases.json
docs/content/: _index.md  formula_updater.md  products.md
docs/layouts/shortcodes/: list_releases.html
formula_updater/: index.html
products/: index.html
src/: cli.rs  github.rs  main.rs
tags/: index.html  index.xml
