[package]
name = "tamada-tap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sha2 = "0.10"
tera = "1"
chrono = { version = "0.4", features = ["serde"] }
duct = "0.13"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"