[package]
name = "formula_updater"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
sha2 = "0.10"
tera = "1"
chrono = { version = "0.4", features = ["serde"] }
duct = "1.0.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
log = "0.4.27"
env_logger = "0.11.8"
indicatif = "0.18.0"
futures-util = "0.3.31"
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.3"
