[package]
name = "formula_updater"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["blocking", "json", "stream"] }
sha2 = "0.11"
tera = "1"
chrono = { version = "0.4.44", features = ["serde"] }
duct = "1.1.1"
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
log = "0.4.29"
env_logger = "0.11.10"
indicatif = "0.18.4"
futures-util = "0.3.32"
futures = "0.3.32"
base16ct = { version = "1.0.0", features = [ "alloc" ] }

[dev-dependencies]
tempfile = "3.27.0"
